--- a/lib/api_web/templates/layout/app.html.eex
+++ b/lib/api_web/templates/layout/app.html.eex
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Api · Phoenix Framework</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <script>
+    window.addEventListener('message', function(event) {
+      console.log(event);
+    })
+
+    console.log("loaded");
+    </script>
   </head>
-  <body>
+  <body onLoad="parent.postMessage('loaded', '*')">
     <header>
       <section class="container">
         <nav role="navigation">
