--- a/lib/api_web/templates/receipt/default.html.eex
+++ b/lib/api_web/templates/receipt/default.html.eex
@@ -1,15 +1,14 @@
 <div class="receipts">
   <div class="flex h-56 mx-10 justify-between"> 
-    <h1 class="primary-text capitalize font-black text-3xl self-end"><%= @template.header %></h1>
-    <img id="logo" src="<%= @template.logo %>" class="w-48 mt-4 self-start"/>
+    <h1 class="primary-text capitalize font-black text-3xl self-end" id="title"><%= @template.title %></h1>
+    <img id="logo" src="<%= @template.logo_url %>" class="w-48 mt-4 self-start template_logo"/>
 
   </div>
   <div class="mx-10 mt-8 py-4">
     <p class="texy-gray-700 leading-normal text-sm" id="description"><%= raw @template.description %></p>
-    <img id="signature" src="<%= @template.signature %>" class="w-32" />
-    <p class="texy-gray-700 leading-normal text-sm italic">Wayne Hartrick, CEO, Barks & Meows Shelter</p>
+    <img id="signature" id="signature_url" src="<%= @template.signature_url %>" class="w-32" />
+    <p class="texy-gray-700 leading-normal text-sm italic" id="signature_footer"><%= @template.signature_footer %></p>
   </div>
-
 
   <aside class="form-header mx-10 mt-10 flex justify-between content-center mb-2">
     <address id="from">
@@ -17,7 +16,7 @@
         <p>Official Receipt as below:</p>
       </div>
     </address>
-    <div id="powered-by" class="inline-flex text-sm content-center texy-gray-700"><span>Powered by</span> <img class="-mt-1 object-contain w-12" src="<%= @template.davos %>" /></div>
+    <div id="powered-by" class="inline-flex text-sm content-center texy-gray-700"><span>Powered by</span> <img class="-mt-1 object-contain w-12" src="" /></div>
   </aside>
   <table class="w-full tertiary-background-color tertiary-border-color px-5 py-5 table-fixed">
     <tbody>
@@ -35,7 +34,7 @@
       </tr>
       <tr class="">
         <td class="w-1/4 px-8 py-1"><span class="uppercase font-thin text-xs quaternary-text">Date of issue</span></td>
-        <td class="w-1/4 px-4 py-1"><span class="font-bold text-sm quaternary-text"><%= datetime_to_date(@donation.inserted_at) %></span></td>
+        <td class="w-1/4 px-4 py-1"><span class="font-bold text-sm quaternary-text" id="date_format"><%= datetime_to_date(@donation.inserted_at) %></span></td>
         <td class="w-1/4 px-4 py-1"><span class="uppercase font-thin text-xs quaternary-text">City, Province</span></td>
         <td class="w-1/4 px-4 py-1"><span class="font-bold text-sm quaternary-text capitalize"><%= @donation.city %>, <%= @donation.state %>, <%= @donation.zip %><span></td>
       </tr>
@@ -74,6 +73,6 @@
         </div>
       </address>
 
-      <img id="logo2" src="<%= @template.logo %>" class="h-24 w-auto"/>
+      <img src="<%= @template.logo_url %>" class="h-24 w-auto template_logo"/>
     </aside>
 </div>
