--- a/lib/api_web/templates/layout/pdf.html.eex
+++ b/lib/api_web/templates/layout/pdf.html.eex
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="--primary: <%= primary_colour(@template, @view_module) %>; --secondary: <%= secondary_colour(@template, @view_module) %>; --tertiary: <%= tertiary_colour(@template, @view_module) %>; --quaternary: <%= quaternary_colour(@template, @view_module) %>; --quinary: <%= quinary_colour(@template, @view_module) %>; --font: <%= font(@template, @view_module) %>">
   <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="http://localhost:4000/css/app.css"/>
     <script>
     window.addEventListener('message', function(event) {
-      console.log(event.data);
       event.data.forEach(function(element) {
          if(element.key == 'title') {
             document.getElementById('title').innerHTML = element.value
@@ -39,8 +38,20 @@
     </script>
   </head>
   <body>
-    <main role="main" class="container">
+    <main role="main" class="">
       <%= render @view_module, @view_template, assigns %>
     </main>
+    <footer>
+      <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    </footer>
   </body>
 </html>
