--- a/lib/api_web/templates/receipt/default.html.eex
+++ b/lib/api_web/templates/receipt/default.html.eex
@@ -34,7 +34,7 @@
       </tr>
       <tr class="">
         <td class="w-1/4 px-8 py-1"><span class="uppercase font-thin text-xs quaternary-text">Date of issue</span></td>
-        <td class="w-1/4 px-4 py-1"><span class="font-bold text-sm quaternary-text" id="date_format"><%= @donation.payment_date %></span></td>
+        <td class="w-1/4 px-4 py-1"><span class="font-bold text-sm quaternary-text date-format"><%= format_date(@donation.payment_date, @template.date_format) %></span></td>
         <td class="w-1/4 px-4 py-1"><span class="uppercase font-thin text-xs quaternary-text">City, Province</span></td>
         <td class="w-1/4 px-4 py-1"><span class="font-bold text-sm quaternary-text capitalize"><%= @donation.city %>, <%= @donation.province %>,</span> <span class="font-bold text-sm quaternary-text uppercase"><%= @donation.postal_code %><span></td>
       </tr>
@@ -46,7 +46,7 @@
       </tr>
       <tr class="">
         <td class="w-1/4 px-8 py-1 pt-6"><span class="uppercase font-thin text-xs quaternary-text">Received on</span></td>
-        <td class="w-1/4 px-4 py-1 pt-6"><span class="font-bold text-sm quaternary-text"><%= @donation.payment_date %><span></td>
+        <td class="w-1/4 px-4 py-1 pt-6"><span class="font-bold text-sm quaternary-text date-format"><%= format_date(@donation.payment_date, @template.date_format)%><span></td>
         <td class="w-1/4 px-4 py-1 pt-6"><span class="uppercase font-thin text-xs quaternary-text">Amount Received</span></td>
         <td class="w-1/4 px-4 py-1 pt-6"><span class="font-bold text-sm quaternary-text"><%= cents_to_dollars(@donation.payment_amount) %><span></td>
       </tr>
